--- a/model/grgoup_one.ipynb
+++ b/model/grgoup_one.ipynb
@@ -8,7 +8,86 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# Load dataset\n",
+    "data_path = 'House Price.csv'\n",
+    "df = pd.read_csv(data_path)\n",
+    "\n",
+    "# Display basic info\n",
+    "print(df.info())\n",
+    "print(df.describe())\n",
+    "\n",
+    "# Handle missing values\n",
+    "df = df.dropna()\n",
+    "\n",
+    "# Define features and target\n",
+    "X = df.drop(columns=['Price'])  # Assuming 'Price' is the target column\n",
+    "y = df['Price']\n",
+    "\n",
+    "# Identify numerical and categorical features\n",
+    "num_features = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "cat_features = X.select_dtypes(include=['object']).columns.tolist()\n",
+    "\n",
+    "# Preprocessing\n",
+    "num_transformer = StandardScaler()\n",
+    "cat_transformer = OneHotEncoder(handle_unknown='ignore')\n",
+    "\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    ('num', num_transformer, num_features),\n",
+    "    ('cat', cat_transformer, cat_features)\n",
+    "])\n",
+    "\n",
+    "# Adding PCA for dimensionality reduction\n",
+    "pca = PCA(n_components=0.95)  # Retain 95% variance\n",
+    "\n",
+    "# Model pipeline\n",
+    "model = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('pca', pca),\n",
+    "    ('regressor', RandomForestRegressor(n_estimators=100, random_state=42))\n",
+    "])\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluation\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'MAE: {mae}')\n",
+    "print(f'MSE: {mse}')\n",
+    "print(f'RMSE: {rmse}')\n",
+    "print(f'R2 Score: {r2}')\n",
+    "\n",
+    "# Feature importance\n",
+    "if hasattr(model.named_steps['regressor'], 'feature_importances_'):\n",
+    "    feature_importance = model.named_steps['regressor'].feature_importances_\n",
+    "    features = num_features + list(model.named_steps['preprocessor'].named_transformers_['cat'].get_feature_names_out(cat_features))\n",
+    "    feature_importance_df = pd.DataFrame({'Feature': features, 'Importance': feature_importance})\n",
+    "    feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
+    "    \n",
+    "    plt.figure(figsize=(10,6))\n",
+    "    sns.barplot(x=feature_importance_df['Importance'], y=feature_importance_df['Feature'])\n",
+    "    plt.title('Feature Importance')\n",
+    "    plt.show()\n"
    ]
   }
  ],
