Kaggle Notebook | HOUSE | house

--- a/house.ipynb
+++ b/house.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b7e27c7d",
+   "id": "e03d7235",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-04-01T13:08:15.007350Z",
-     "iopub.status.busy": "2025-04-01T13:08:15.006987Z",
-     "iopub.status.idle": "2025-04-01T13:08:15.921161Z",
-     "shell.execute_reply": "2025-04-01T13:08:15.919897Z"
+     "iopub.execute_input": "2025-04-13T16:42:35.064491Z",
+     "iopub.status.busy": "2025-04-13T16:42:35.064026Z",
+     "iopub.status.idle": "2025-04-13T16:42:35.946919Z",
+     "shell.execute_reply": "2025-04-13T16:42:35.945795Z"
     },
     "papermill": {
-     "duration": 0.91961,
-     "end_time": "2025-04-01T13:08:15.923336",
+     "duration": 0.888023,
+     "end_time": "2025-04-13T16:42:35.948750",
      "exception": false,
-     "start_time": "2025-04-01T13:08:15.003726",
+     "start_time": "2025-04-13T16:42:35.060727",
      "status": "completed"
     },
     "tags": []
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/kaggle/input/houses-price-csv/House Price.csv\n"
+      "/kaggle/input/house-prices-csv/House Price.csv\n"
      ]
     }
    ],
@@ -54,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fad726cb",
+   "id": "f4fed60b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T13:08:15.929053Z",
-     "iopub.status.busy": "2025-04-01T13:08:15.928548Z",
-     "iopub.status.idle": "2025-04-01T13:08:21.310930Z",
-     "shell.execute_reply": "2025-04-01T13:08:21.309483Z"
+     "iopub.execute_input": "2025-04-13T16:42:35.954001Z",
+     "iopub.status.busy": "2025-04-13T16:42:35.953582Z",
+     "iopub.status.idle": "2025-04-13T16:42:41.225626Z",
+     "shell.execute_reply": "2025-04-13T16:42:41.224195Z"
     },
     "papermill": {
-     "duration": 5.386582,
-     "end_time": "2025-04-01T13:08:21.312613",
+     "duration": 5.276216,
+     "end_time": "2025-04-13T16:42:41.227418",
      "exception": false,
-     "start_time": "2025-04-01T13:08:15.926031",
+     "start_time": "2025-04-13T16:42:35.951202",
      "status": "completed"
     },
     "tags": []
@@ -109,6 +109,39 @@
    "source": [
     "pip install pandas matplotlib seaborn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "50d1a404",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-04-13T16:42:41.233415Z",
+     "iopub.status.busy": "2025-04-13T16:42:41.233001Z",
+     "iopub.status.idle": "2025-04-13T16:42:43.457607Z",
+     "shell.execute_reply": "2025-04-13T16:42:43.456384Z"
+    },
+    "papermill": {
+     "duration": 2.229947,
+     "end_time": "2025-04-13T16:42:43.459731",
+     "exception": false,
+     "start_time": "2025-04-13T16:42:41.229784",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n"
+   ]
   }
  ],
  "metadata": {
@@ -116,8 +149,8 @@
    "accelerator": "none",
    "dataSources": [
     {
-     "datasetId": 7022705,
-     "sourceId": 11240507,
+     "datasetId": 7024757,
+     "sourceId": 11243207,
      "sourceType": "datasetVersion"
     }
    ],
@@ -146,14 +179,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.688769,
-   "end_time": "2025-04-01T13:08:21.935122",
+   "duration": 12.354766,
+   "end_time": "2025-04-13T16:42:44.181725",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-04-01T13:08:12.246353",
+   "start_time": "2025-04-13T16:42:31.826959",
    "version": "2.6.0"
   }
  },
