--- a/house.ipynb
+++ b/house.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e03d7235",
+   "id": "aa755500",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-04-13T16:42:35.064491Z",
-     "iopub.status.busy": "2025-04-13T16:42:35.064026Z",
-     "iopub.status.idle": "2025-04-13T16:42:35.946919Z",
-     "shell.execute_reply": "2025-04-13T16:42:35.945795Z"
+     "iopub.execute_input": "2025-04-13T17:07:46.184268Z",
+     "iopub.status.busy": "2025-04-13T17:07:46.183920Z",
+     "iopub.status.idle": "2025-04-13T17:07:47.189502Z",
+     "shell.execute_reply": "2025-04-13T17:07:47.188214Z"
     },
     "papermill": {
-     "duration": 0.888023,
-     "end_time": "2025-04-13T16:42:35.948750",
+     "duration": 1.011349,
+     "end_time": "2025-04-13T17:07:47.191467",
      "exception": false,
-     "start_time": "2025-04-13T16:42:35.060727",
+     "start_time": "2025-04-13T17:07:46.180118",
      "status": "completed"
     },
     "tags": []
@@ -54,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f4fed60b",
+   "id": "cb3a35e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-13T16:42:35.954001Z",
-     "iopub.status.busy": "2025-04-13T16:42:35.953582Z",
-     "iopub.status.idle": "2025-04-13T16:42:41.225626Z",
-     "shell.execute_reply": "2025-04-13T16:42:41.224195Z"
+     "iopub.execute_input": "2025-04-13T17:07:47.198289Z",
+     "iopub.status.busy": "2025-04-13T17:07:47.197731Z",
+     "iopub.status.idle": "2025-04-13T17:07:53.061690Z",
+     "shell.execute_reply": "2025-04-13T17:07:53.059992Z"
     },
     "papermill": {
-     "duration": 5.276216,
-     "end_time": "2025-04-13T16:42:41.227418",
+     "duration": 5.869133,
+     "end_time": "2025-04-13T17:07:53.063688",
      "exception": false,
-     "start_time": "2025-04-13T16:42:35.951202",
+     "start_time": "2025-04-13T17:07:47.194555",
      "status": "completed"
     },
     "tags": []
@@ -113,19 +113,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "50d1a404",
+   "id": "4f0c2a29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-13T16:42:41.233415Z",
-     "iopub.status.busy": "2025-04-13T16:42:41.233001Z",
-     "iopub.status.idle": "2025-04-13T16:42:43.457607Z",
-     "shell.execute_reply": "2025-04-13T16:42:43.456384Z"
+     "iopub.execute_input": "2025-04-13T17:07:53.070537Z",
+     "iopub.status.busy": "2025-04-13T17:07:53.070146Z",
+     "iopub.status.idle": "2025-04-13T17:07:55.612230Z",
+     "shell.execute_reply": "2025-04-13T17:07:55.611158Z"
     },
     "papermill": {
-     "duration": 2.229947,
-     "end_time": "2025-04-13T16:42:43.459731",
+     "duration": 2.547711,
+     "end_time": "2025-04-13T17:07:55.614284",
      "exception": false,
-     "start_time": "2025-04-13T16:42:41.229784",
+     "start_time": "2025-04-13T17:07:53.066573",
      "status": "completed"
     },
     "tags": []
@@ -141,6 +141,104 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.preprocessing import LabelEncoder\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "09830dfe",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-04-13T17:07:55.620831Z",
+     "iopub.status.busy": "2025-04-13T17:07:55.620336Z",
+     "iopub.status.idle": "2025-04-13T17:07:55.694757Z",
+     "shell.execute_reply": "2025-04-13T17:07:55.693490Z"
+    },
+    "papermill": {
+     "duration": 0.079718,
+     "end_time": "2025-04-13T17:07:55.696719",
+     "exception": false,
+     "start_time": "2025-04-13T17:07:55.617001",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 545 entries, 0 to 544\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   price             545 non-null    int64 \n",
+      " 1   area              545 non-null    int64 \n",
+      " 2   bedrooms          545 non-null    int64 \n",
+      " 3   bathrooms         545 non-null    int64 \n",
+      " 4   stories           545 non-null    int64 \n",
+      " 5   mainroad          545 non-null    object\n",
+      " 6   guestroom         545 non-null    object\n",
+      " 7   basement          545 non-null    object\n",
+      " 8   hotwaterheating   545 non-null    object\n",
+      " 9   airconditioning   545 non-null    object\n",
+      " 10  parking           545 non-null    int64 \n",
+      " 11  prefarea          545 non-null    object\n",
+      " 12  furnishingstatus  545 non-null    object\n",
+      "dtypes: int64(6), object(7)\n",
+      "memory usage: 55.5+ KB\n",
+      "None\n",
+      "\n",
+      "First 5 rows:\n",
+      "      price  area  bedrooms  bathrooms  stories mainroad guestroom basement  \\\n",
+      "0  13300000  7420         4          2        3      yes        no       no   \n",
+      "1  12250000  8960         4          4        4      yes        no       no   \n",
+      "2  12250000  9960         3          2        2      yes        no      yes   \n",
+      "3  12215000  7500         4          2        2      yes        no      yes   \n",
+      "4  11410000  7420         4          1        2      yes       yes      yes   \n",
+      "\n",
+      "  hotwaterheating airconditioning  parking prefarea furnishingstatus  \n",
+      "0              no             yes        2      yes        furnished  \n",
+      "1              no             yes        3       no        furnished  \n",
+      "2              no              no        2      yes   semi-furnished  \n",
+      "3              no             yes        3      yes        furnished  \n",
+      "4              no             yes        2       no        furnished  \n",
+      "\n",
+      "Descriptive Statistics:\n",
+      "              price          area    bedrooms   bathrooms     stories  \\\n",
+      "count  5.450000e+02    545.000000  545.000000  545.000000  545.000000   \n",
+      "mean   4.766729e+06   5150.541284    2.965138    1.286239    1.805505   \n",
+      "std    1.870440e+06   2170.141023    0.738064    0.502470    0.867492   \n",
+      "min    1.750000e+06   1650.000000    1.000000    1.000000    1.000000   \n",
+      "25%    3.430000e+06   3600.000000    2.000000    1.000000    1.000000   \n",
+      "50%    4.340000e+06   4600.000000    3.000000    1.000000    2.000000   \n",
+      "75%    5.740000e+06   6360.000000    3.000000    2.000000    2.000000   \n",
+      "max    1.330000e+07  16200.000000    6.000000    4.000000    4.000000   \n",
+      "\n",
+      "          parking  \n",
+      "count  545.000000  \n",
+      "mean     0.693578  \n",
+      "std      0.861586  \n",
+      "min      0.000000  \n",
+      "25%      0.000000  \n",
+      "50%      0.000000  \n",
+      "75%      1.000000  \n",
+      "max      3.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the dataset\n",
+    "df = pd.read_csv('/kaggle/input/house-prices-csv/House Price.csv')\n",
+    "# Data Exploration\n",
+    "print(\"Dataset Info:\")\n",
+    "print(df.info())\n",
+    "print(\"\\nFirst 5 rows:\")\n",
+    "print(df.head())\n",
+    "print(\"\\nDescriptive Statistics:\")\n",
+    "print(df.describe())"
    ]
   }
  ],
@@ -179,14 +277,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.354766,
-   "end_time": "2025-04-13T16:42:44.181725",
+   "duration": 13.890141,
+   "end_time": "2025-04-13T17:07:56.420478",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-04-13T16:42:31.826959",
+   "start_time": "2025-04-13T17:07:42.530337",
    "version": "2.6.0"
   }
  },
